Feature/places experiments (#26)
* add topic remapping

* add original hydra rooms as clustering option

* fix issue with agglomerative config not being parsed and add places config

* fix problems with room detection and empty features

* minor config and launch file updates

* add actual room config and downgrade verbosity

* fill out IB config for places and fix logging grammar

* (wip) start on infrastructure to collect ablation data

* (wip) start on script to also prep bags for experiments

* get bag creation fully working

* mostly finalize ablation scripts

* fix issue with skip existing

* add optional separate place tasks and fix clip topic

* handle setting actual ablation arguments correctly and fix other issues

* fix output location

* make existing skip more verbose

* tune place params based on office (#23)

* Feature/places eval (#24)

* (wip) start drafting eval portion

* add gt reconstruction command

* add building33 and actually implement eval

* actually collate results

* make error printing cleaner

* actually show metrics

* use multiprocessing for analysis

* add actual table generation

Co-authored-by: Nathan Hughes <nathan.h.hughes@gmail.com>

* add extra run options, fix prompt bug, and automatically add markup

* fix clustering visualizer

* add instructions and update voxel size default

* fix branches

* minor changes and tuning (#25)

* update visualizer

* tweak prompts

* fix visualizer task paths

Co-authored-by: Nathan Hughes <nathan.h.hughes@gmail.com>
Co-authored-by: Yun Chang <yunchang@mit.edu>

--- a/hydra_llm_ros/config/realsense_pipeline.yaml
+++ b/hydra_llm_ros/config/realsense_pipeline.yaml
@@ -129,7 +129,38 @@ backend:
     tasks:
       type: RosEmbeddingGroup
   regions:
+    color_by_task: true
     extractor:
-      type: PlaceClustering
+      type: $(arg places_clustering_type)
       clustering:
-        type: NoClustering
+        type: AgglomerativeClustering  # unused if doing geometric rooms
+        tasks:
+          type: RosEmbeddingGroup
+          prompts: $(arg places_task_prompts)
+          silent_wait: false
+        metric:
+          type: cosine
+        selector:
+          type: IB
+          max_delta: 0.1
+          score_threshold: 0.0
+          top_k: 2
+          cumulative: true
+          null_task_preprune: false
+      rooms:
+        min_dilation_m: 0.5
+        max_dilation_m: 1.2
+        min_window_size: 0.2
+        clip_dilation_window_to_max: false
+        min_component_size: 10
+        min_room_size: 10
+        dilation_threshold_mode: PLATEAU
+        min_lifetime_length_m: 0.1
+        plateau_ratio: 0.25
+        clustering_mode: NEIGHBORS
+        max_modularity_iters: 5
+        modularity_gamma: 1.0
+        room_prefix: R
+        dilation_diff_threshold_m: -1.0
+        log_filtrations: false
+        log_place_graphs: false
