--- a/hydra_llm_ros/config/clustering_visualizer.yaml
+++ b/hydra_llm_ros/config/clustering_visualizer.yaml
@@ -1,16 +1,13 @@
 ---
 graphs:
-  original:
-    plugins: {dsg_mesh: MeshPlugin}
-    graph:
-      type: GraphFromFile
-      filepath: $(arg scene_graph_path)
-      colormap_filepath: $(arg semantic_colormap)
   clustering:
-    plugins: {segments: LLMLayerPlugin, objects: LLMLayerPlugin, interlayer_edges: InterlayerPlugin}
-    graph:
-      type: GraphFromZmq
-      url: $(arg zmq_url)
+    plugins:
+      segments: LLMLayerPlugin
+      objects: LLMLayerPlugin
+      places: LLMLayerPlugin
+      regions: LLMLayerPlugin
+      interlayer_edges: InterlayerPlugin
+      dsg_mesh: MeshPlugin
 gt_publisher:
   filepath: $(arg gt_path)
   scale: 0.05
@@ -19,19 +16,29 @@ gt_publisher:
     task_service_name: /gt_task_server/get_embedding
 clustering:
   interlayer_edges:
-    skiplist: [4, 5]
+    skiplist: [5]
   segments:
+    layer: 1
+    layer_to_use: 1
+    visualization_layer: 1
+    min_saturation:  0.5
+  objects:
     layer: 2
     layer_to_use: 2
     visualization_layer: 2
-    min_saturation:  0.5
-  objects:
+    min_saturation: 0.5
+  places:
     layer: 3
     layer_to_use: 3
     visualization_layer: 3
-    min_saturation: 0.5
+    min_saturation:  0.5
+  regions:
+    layer: 4
+    layer_to_use: 4
+    visualization_layer: 4
+    min_saturation:  0.5
   config:
-    layer2:
+    layer1:
       visualize: true
       z_offset_scale: 1.5
       marker_scale: 0.05
@@ -40,7 +47,7 @@ clustering:
       collapse_bounding_box: false
       bbox_wireframe_scale: 0.02
       bbox_wireframe_edge_scale: 0.02
-    layer3:
+    layer2:
       visualize: true
       z_offset_scale: 0.5
       marker_scale: 0.3
@@ -50,5 +57,21 @@ clustering:
       collapse_bounding_box: true
       bbox_wireframe_scale: 0.02
       bbox_wireframe_edge_scale: 0.02
+      interlayer_edge_scale: 0.01
+      interlayer_edge_alpha: 0.6
+    layer3:
+      visualize: true
+      z_offset_scale: 2.5
+      marker_scale: 0.2
+      use_label: false
+      use_bounding_box: false
+      interlayer_edge_scale: 0.01
+      interlayer_edge_alpha: 0.6
+    layer4:
+      visualize: true
+      z_offset_scale: 3.5
+      marker_scale: 0.3
+      use_label: true
+      use_bounding_box: false
       interlayer_edge_scale: 0.01
       interlayer_edge_alpha: 0.6
