--- a/hydra_llm_ros/config/region_visualizer_config.yaml
+++ b/hydra_llm_ros/config/region_visualizer_config.yaml
@@ -1,6 +1,6 @@
 ---
 config:
-  layer_z_step: 2.0  # unit separation between layers
+  layer_z_step: 1.0  # unit separation between layers
   mesh_edge_break_ratio: 0.5
   mesh_layer_offset: 0.0
   collapse_layers: false
@@ -32,101 +32,44 @@ config:
       visualize_interlayer_edges: false
       z_offset_scale: 0.0
   layer1:
-    # generic
-    z_offset_scale: 2.0
     visualize: false
-    # node
-    marker_scale: 0.01
-    marker_alpha: 0.6
-    use_sphere_marker: true
-    use_collapsed_label: false
-    use_bounding_box: true
-    collapse_bounding_box: false
-    bounding_box_alpha: 0.6
-    bbox_wireframe_scale: 0.02
-    bbox_wireframe_edge_scale: 0.02
-    # edge
-    use_edge_source: true
-    intralayer_edge_scale: 0.03
-    intralayer_edge_alpha: 0.6
-    intralayer_edge_use_color: false
-    intralayer_edge_insertion_skip: 0
   layer2:
-    # generic
-    z_offset_scale: 1.0
     visualize: false
-    # node
-    marker_scale: 0.30
-    marker_color_mode: 0  # default
-    marker_alpha: 0.6
-    use_sphere_marker: false
-    use_label: true
-    use_collapsed_label: false
-    label_height: 0.5
-    label_scale: 0.45
-    use_bounding_box: false
-    bounding_box_alpha: 0.6
-    bbox_wireframe_scale: 0.05
-    bbox_wireframe_edge_scale: 0.05
-    collapse_bounding_box: true
-    # edge
-    use_edge_source: true
-    intralayer_edge_scale: 0.03
-    intralayer_edge_alpha: 0.6
-    intralayer_edge_use_color: false
-    intralayer_edge_insertion_skip: 0
   layer3:
-    # general
-    z_offset_scale: 3.0
-    visualize: false
-    # nodes
-    marker_scale: 0.2
-    marker_color_mode: 1  # parent
-    marker_alpha: 0.9
-    use_sphere_marker: true
-    use_label: false
-    use_collapsed_label: false
-    label_height: 1.0
-    label_scale: 0.5
-    use_bounding_box: false
-    bounding_box_alpha: 0.5
-    collapse_bounding_box: false
-    # edges
-    use_edge_source: false
-    interlayer_edge_scale: 0.01
-    interlayer_edge_alpha: 0.2
-    interlayer_edge_use_color: false
-    interlayer_edge_insertion_skip: 0
-    intralayer_edge_scale: 0.01
-    intralayer_edge_alpha: 0.5
-    intralayer_edge_use_color: false
-    intralayer_edge_insertion_skip: 0
-  layer4:
-    # general
-    z_offset_scale: 4.2
-    visualize: false
+    z_offset_scale: -0.8
+    visualize: true
     # nodes
     marker_scale: 0.05
-    marker_color_mode: 0  # default
-    marker_alpha: 0.8
+    marker_color_mode: 2  # parent
+    marker_alpha: 0.5
     use_sphere_marker: true
-    use_label: true
+    use_label: false
+    use_bounding_box: false
+    # edges
+    use_edge_source: false
+    intralayer_edge_scale: 0.001
+  layer4:
+    # general
+    z_offset_scale: 2.0
+    visualize: true
+    # nodes
+    marker_scale: 0.8
+    marker_color_mode: 0  # default
+    marker_alpha: 1.0
+    use_sphere_marker: false
+    use_label: false
     use_collapsed_label: false
     label_height: 1.25
-    label_scale: 0.3
+    label_scale: 0.5
     use_bounding_box: false
-    bounding_box_alpha: 0.5
-    collapse_bounding_box: false
     # edges
     use_edge_source: true
+    intralayer_edge_scale: 0.08
+    intralayer_edge_alpha: 1.0
     interlayer_edge_scale: 0.02
     interlayer_edge_alpha: 0.4
-    interlayer_edge_use_color: false
+    interlayer_edge_use_color: true
     interlayer_edge_insertion_skip: 0
-    intralayer_edge_scale: 0.01
-    intralayer_edge_alpha: 0.5
-    intralayer_edge_use_color: false
-    intralayer_edge_insertion_skip: 0
   layer5:
     visualize: false
 llm_plugins:
@@ -140,7 +83,7 @@ llm_places:
   max_score: 0.65
 color_objects_by_task: true
 color_places_by_task: false
-color_rooms_by_task: true
+color_rooms_by_task: false
 places_footprints:
   use_place_radius: false
   num_samples: 50
