Feature/khronos active window (#31)
* update to api changes

* start on closed set test pipeline for uhumans2

* tweak config slightly

* drop specialized frontend

Co-authored-by: Nathan Hughes <nathan.h.hughes@gmail.com>

--- a/clio_ros/CMakeLists.txt
+++ b/clio_ros/CMakeLists.txt
@@ -6,7 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(gflags REQUIRED)
 find_package(clio REQUIRED)
 find_package(catkin REQUIRED COMPONENTS hydra_ros hydra_visualizer khronos_ros roscpp)
 
@@ -18,17 +17,14 @@ catkin_package(
 )
 
 add_library(
-  ${PROJECT_NAME} src/category_legend.cpp src/colormap_legend.cpp src/clio_pipeline.cpp
-                  src/llm_frontend.cpp src/task_information.cpp
+  ${PROJECT_NAME} src/category_legend.cpp src/colormap_legend.cpp
+                  src/task_information.cpp
 )
 target_include_directories(${PROJECT_NAME} PUBLIC include ${catkin_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES} clio::clio)
 
-add_executable(${PROJECT_NAME}_node app/clio_node.cpp)
-target_link_libraries(${PROJECT_NAME}_node PUBLIC ${PROJECT_NAME} gflags)
-
 install(
-  TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
+  TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
