Feature/release cleanup (#40)
* point at public repos

* add tensorrt note

* add eval skiplist and clean up instructions a little

* fix workspace path

* drop old files and update install commands

* add required setup.py for system setuptools version

* drop setup.py

* split environments

* add deactivate call to avoid issues with environments

* add deactivate to correct block

* update run instructions

* fix code block

* fix relative paths

* update background and visualizer settings

* flip region colormap

* add note about using the correct dataset paths

* add warning about waiting for clio to start

* fix wording

Co-authored-by: Nathan Hughes <nathan.h.hughes@gmail.com>

--- a/clio_ros/CMakeLists.txt
+++ b/clio_ros/CMakeLists.txt
@@ -10,8 +10,6 @@ catkin_package(
   LIBRARIES
 )
 
-install(DIRECTORY include/${PROJECT_NAME}/
-        DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-)
-
 install(DIRECTORY launch/ DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
+install(DIRECTORY config/ DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config)
+install(DIRECTORY rviz/ DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/rviz)
